Move root-level docker files into docker/ subdir (#877)
* Move root-level docker files into docker/ subdir

* move all of the compose files

* remove root aux compose files, refactor away the no-db and worker compose files

* unify the app and worker dockerfiles into a single file that leverages build stages

* move python scripts into a subdir, fix paths in compose integration files

* fix the script tests

* use python sleep instead of system sleep, fix script paths

* remove the analytics_id that accicentally got committed

* updated changelog

* move the sample sql data to a subdir of docker/ so it can be mounted

* update the teardown command and fix the integration files

* fix more path typos

* more desperate tweaks

* fix mysql/mariadb/mongo tests

* added an additional build step if mssql not there, all tests passing

* fix an accidental lowercasing

* Apply suggestions from code review

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* Update CHANGELOG.md

Co-authored-by: Paul Sanders <psanders1@gmail.com>

Co-authored-by: Paul Sanders <psanders1@gmail.com>
Co-authored-by: Paul Sanders <pau@ethyca.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: webserver
     build:
       context: .
-      dockerfile: Dockerfile.app
+      target: app
     depends_on:
       - db
       - redis
@@ -58,6 +58,23 @@ services:
       - 6379
     ports:
       - "0.0.0.0:6379:6379"
+
+  worker:
+    container_name: worker
+    build:
+      context: .
+      target: worker
+    command: fidesops worker
+    depends_on:
+      redis:
+        condition: service_started
+    restart: always
+    volumes:
+      - type: bind
+        source: ./
+        target: /fidesops
+        read_only: False
+      - /fidesops/src/fidesops.egg-info
 
   docs:
     build:
