--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,7 @@ click>=8.1
 colorama>=0.4.3
 cryptography>=36
 deepdiff==5.8.0
-fastapi==0.77.1
-fideslang==1.1.0
-fideslib==2.2.2
-fideslog==1.1.5
+fidesops==1.6.3
 GitPython==3.1
 loguru>=0.5,<0.6
 openpyxl==3.0.9
