Feat: Vault for secrets (#869)
* Replace config/gh secrets with secrets from vault

* sorting and update changelog

* fix path for importing test helpers

* more sorting

* run ci again with empty commit

* update unsafe_pr_checks

* allow for no vault vars for unit tests, adds back back for saas config toml vars

* check for client

* sort

* init client to None

* fix imports

* fix pytest markers to better indicate which tests rely on actual secrets

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ fastapi[all]==0.78.0
 fideslang==1.0.0
 fideslib==3.0.0
 fideslog==1.2.1
+hvac==0.11.2
 multidimensional_urlencode==0.0.4
 pandas==1.3.3
 passlib[bcrypt]==1.7.4
