--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -27,49 +27,24 @@ jobs:
   External-SaaS-Connectors:
     runs-on: ubuntu-latest
     if: contains(github.event.pull_request.labels.*.name, 'run unsafe ci checks')
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Get Vault Token
+        uses: hashicorp/vault-action@v2.4.1
+        with:
+          url: ${{ secrets.VAULT_ADDR }}
+          namespace: ${{ secrets.VAULT_NAMESPACE }}
+          method: jwt
+          role: ${{ secrets.VAULT_ROLE }}
+          exportToken: True
+
       - name: SaaS Connector Tests
         env:
-          MAILCHIMP_DOMAIN: ${{ secrets.MAILCHIMP_DOMAIN }}
-          MAILCHIMP_USERNAME: ${{ secrets.MAILCHIMP_USERNAME }}
-          MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
-          MAILCHIMP_IDENTITY_EMAIL: ${{ secrets.MAILCHIMP_IDENTITY_EMAIL }}
-          SENTRY_DOMAIN: ${{ secrets.SENTRY_DOMAIN }}
-          SENTRY_ACCESS_TOKEN: ${{ secrets.SENTRY_ACCESS_TOKEN }}
-          SENTRY_ERASURE_TOKEN: ${{ secrets.SENTRY_ERASURE_TOKEN }}
-          SENTRY_IDENTITY_EMAIL: ${{ secrets.SENTRY_IDENTITY_EMAIL }}
-          SENTRY_ERASURE_IDENTITY: ${{ secrets.SENTRY_ERASURE_IDENTITY }}
-          SENTRY_USER_ID: ${{ secrets.SENTRY_USER_ID }}
-          SENTRY_ISSUE_URL: ${{ secrets.SENTRY_ISSUE_URL }}
-          STRIPE_DOMAIN: ${{ secrets.STRIPE_DOMAIN }}
-          STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
-          STRIPE_PAYMENT_TYPES: ${{ secrets.STRIPE_PAYMENT_TYPES }}
-          STRIPE_ITEMS_PER_PAGE: ${{ secrets.STRIPE_ITEMS_PER_PAGE }}
-          STRIPE_IDENTITY_EMAIL: ${{ secrets.STRIPE_IDENTITY_EMAIL }}
-          HUBSPOT_DOMAIN: ${{ secrets.HUBSPOT_DOMAIN }}
-          HUBSPOT_HAPIKEY: ${{ secrets.HUBSPOT_HAPIKEY }}
-          HUBSPOT_IDENTITY_EMAIL: ${{ secrets.HUBSPOT_IDENTITY_EMAIL }}
-          SEGMENT_DOMAIN: ${{ secrets.SEGMENT_DOMAIN }}
-          SEGMENT_API_DOMAIN: ${{ secrets.SEGMENT_API_DOMAIN }}
-          SEGMENT_USER_TOKEN: ${{ secrets.SEGMENT_USER_TOKEN }}
-          SEGMENT_PERSONAS_DOMAIN: ${{ secrets.SEGMENT_PERSONAS_DOMAIN }}
-          SEGMENT_WORKSPACE: ${{ secrets.SEGMENT_WORKSPACE }}
-          SEGMENT_ACCESS_TOKEN: ${{ secrets.SEGMENT_ACCESS_TOKEN }}
-          SEGMENT_NAMESPACE_ID: ${{ secrets.SEGMENT_NAMESPACE_ID }}
-          SEGMENT_ACCESS_SECRET: ${{ secrets.SEGMENT_ACCESS_SECRET }}
-          SEGMENT_IDENTITY_EMAIL: ${{ secrets.SEGMENT_IDENTITY_EMAIL }}
-          SALESFORCE_DOMAIN: ${{ secrets.SALESFORCE_DOMAIN }}
-          SALESFORCE_CLIENT_ID: ${{ secrets.SALESFORCE_CLIENT_ID }}
-          SALESFORCE_CLIENT_SECRET: ${{ secrets.SALESFORCE_CLIENT_SECRET }}
-          SALESFORCE_ACCESS_TOKEN: ${{ secrets.SALESFORCE_ACCESS_TOKEN }}
-          SALESFORCE_USERNAME: ${{ secrets.SALESFORCE_USERNAME }}
-          SALESFORCE_PASSWORD: ${{ secrets.SALESFORCE_PASSWORD }}
-          SALESFORCE_IDENTITY_EMAIL: ${{ secrets.SALESFORCE_IDENTITY_EMAIL }}
-          ZENDESK_DOMAIN: ${{ secrets.ZENDESK_DOMAIN }}
-          ZENDESK_USERNAME: ${{ secrets.ZENDESK_USERNAME }}
-          ZENDESK_API_KEY: ${{ secrets.ZENDESK_API_KEY }}
-          ZENDESK_IDENTITY_EMAIL: ${{ secrets.ZENDESK_IDENTITY_EMAIL }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
+          VAULT_NAMESPACE: ${{ secrets.VAULT_NAMESPACE }}
         run: make pytest-saas
