ui/eslintrc: Turn off "import/prefer-default-export"

--- a/clients/admin-ui/.eslintrc.json
+++ b/clients/admin-ui/.eslintrc.json
@@ -46,6 +46,8 @@
           "^draft"
         ]
       }
-    ]
+    ],
+    // Default exports are slightly preferred for component files, but this rule has too many false positives.
+    "import/prefer-default-export": "off"
   }
 }
