--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = src/fidesctl/_version.py
-versionfile_build = fidesctl/_version.py
+versionfile_source = src/fides/_version.py
+versionfile_build = fides/_version.py
 tag_prefix =
 parentdir_prefix =
 
