--- a/setup.cfg
+++ b/setup.cfg
@@ -27,5 +27,5 @@ init_typed = True
 warn_required_dynamic_aliases = True
 warn_untyped_fields = True
 
-[mypy-src.fides._version]
+[mypy-src.fidesctl._version]
 ignore_errors = True
