--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama>=0.4.3
 cryptography>=36
 deepdiff==5.8.0
 fastapi==0.77.1
+fastapi-pagination[sqlalchemy]==0.9.3
 fideslang==1.1.0
 fideslib==3.0.0
 fideslog==1.1.5
