zendesk and salesforce connection docs (#908)

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -34,9 +34,11 @@ nav:
       - Connection Examples:
         - Hubspot: saas_connectors/example_configs/hubspot.md
         - Mailchimp: saas_connectors/example_configs/mailchimp.md
+        - Salesforce: saas_connectors/example_configs/salesforce.md
         - Segment: saas_connectors/example_configs/segment.md
         - Sentry: saas_connectors/example_configs/sentry.md
         - Stripe: saas_connectors/example_configs/stripe.md
+        - Zendesk: saas_connectors/example_configs/zendesk.md
   - Configuration Reference: guides/configuration_reference.md
   - Deployment Guide: deployment.md
   - Glossary: glossary.md
