Update frontend build path to be more descriptive

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 fidesctl/api/src/main/resources/application.conf
 docs/fides/docs/api/openapi.json
 docs/fides/docs/schemas/config_schema.json
-fidesctl/api/build/static
+ui-build/
 
 ## generic files to ignore
 *~
