--- a/pytest.ini
+++ b/pytest.ini
@@ -23,6 +23,7 @@ markers =
     integration_sendgrid
     integration_outreach
     integration_salesforce
+    integration_adobe_campaign
     unit_saas
 
 filterwarnings =
