Update frontend build path to be more descriptive (#934)
* Update frontend build path to be more descriptive

* Update changelog

* Update dockerignore

* Update dockerfile reference paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 docs/fides/docs/api/openapi.json
 docs/fides/docs/schemas/config_schema.json
-fidesctl/api/ctl/build/static
+ui-build/
 
 ## generic files to ignore
 *~
