Use Nox as the build tool instead of Make (#919)
* Create noxfile.py

* update the dockerfile with more stages

* add GitPython as a dev requirement (used by nox builds)

* add the noxfiles, all docker builds work

* fix the "make compose-build" command

* remove the worker docker stage due to it being redundant with prod

* create a unified compose file for integrations

* update the password prompt to be accurate

* copy/pasta run_infrastructure into the noxfiles dir so it can be called directly via python

* add create_user and seed_test_data to the nox utils

* docs commands work

* get the generic dev command working

* add db commands to utils

* clean up mypy configuration in pyproject.toml and remove config from setup.cfg

* simplify some of the CI targets and start updating the pytest targets

* cleanup run_infrastructure

* update ci_suite and other CI nox targets

* add nox as a dev-requirement

* get dev commands working, sans quickstart

* tweak to the compose_down constant

* get the new pylint target passing

* remove analytics_id

* updated the changelog

* Apply suggestions from code review

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* fix the xenon command

* add a few tweaks to the worker dev command

* fix an import issue

* update dockerignore

* move mssql to the bottom of the datastore list

Co-authored-by: Paul Sanders <psanders1@gmail.com>
Co-authored-by: Paul Sanders <pau@ethyca.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,44 @@
-.idea
-.vscode
-.DS_Store
-.git
-.mypy_cache
-.github
-.pytest_cache
-.python-version
+# Ignore existing build artifacts
+build/
+dist/
+src/fidesctl.egg-info/
+src/ui-build/
 
-clients/admin-ui/node_modules
-clients/admin-ui/.next
-clients/privacy-center/node_modules
-clients/privacy-center/.next
-
-.venv
-venv/
-env/
-
+# Ignore Python-Specific Files
+.mypy_cache/
+.nox/
+.pytest_cache/
 __pycache__/
+.coverage
 **.*.pyc
 **.*.pyo
 **.*.pyd
 
-Dockerfile
-docker-compose*
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+
+# Editors
+.vscode/
+.idea/
+
+# Ignore the docs
+docs/
+
+# Ignore dev files
+.github/
+.devcontainer/
+node_modules/
+clients/admin-ui/node_modules
+clients/admin-ui/.next
+clients/privacy-center/.next
+.DS_Store
+
+# Ignore cypress artifacts
+videos/
+screenshots/
