--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,27 @@
 [build-system]
 requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.
 
-######
-# MyPy
-######
+##########
+## MyPy ##
+##########
 [tool.mypy]
-exclude = ["fidesops.migrations.*"]
-warn_unused_configs = true
-pretty = true
-plugins = ["pydantic.mypy", "sqlmypy"]
+check_untyped_defs = true
 disallow_untyped_defs = true
+files = ['src']
+exclude = ["fidesops.migrations.*"]
+plugins = ["pydantic.mypy", "sqlmypy"]
+pretty = true
 show_error_codes = true
+warn_unused_configs = true
+
+[pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+warn_untyped_fields = true
+
+[mypy-src.fidesops._version]
+ignore_errors = true
 
 [[tool.mypy.overrides]]
 module = ["tests.*"]
