--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -11,13 +11,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install node modules
+        run: |
+          cd clients/admin-ui
+          npm install
+
+      - name: Build and export frontend files
+        run: npm run prod-export
+
       - name: Install Twine
         run: pip install twine
 
       - name: Twine Upload
         run: |
-          python setup.py sdist 
-          twine upload dist/*
+          python setup.py sdist bdist_wheel 
+          twine upload --repository testpypi dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
