--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -26,7 +26,9 @@ jobs:
           npm install
 
       - name: Build and export frontend files
-        run: npm run prod-export
+        run: |
+          cd clients/admin-ui
+          npm run prod-export
 
       - name: Install Twine
         run: pip install twine
