Bundle UI static files with the python package (#941)
* Add npm build commands to setup.py

* Update MANIFEST.in to include UI files

* WIP referencing package UI assets

* Make sure to nest frontend within src/fidesctl

* Rework how we grab the static files

* Don't fail when file is a directory

* Remove comment

* Build wheel instead of sdist

* Swap pkgutil for importlib

* Build universal wheel

* Revert "Add npm build commands to setup.py"

This reverts commit e33bc5682bc88cd363da09d57abd3c2fd0689926.

* Support building the frontend before wheel

* Update publish package workflow to build js

* Attempt to trigger package upload

* Fix working directory

* Remove forced call to publish package

* Pull UI specific files out

* Update changelog

* Revert testpypi repository arg

* Remove unused const

* Update .dockerignore

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* Fix docker references

Co-authored-by: Paul Sanders <psanders1@gmail.com>

--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -11,12 +11,27 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install node modules
+        run: |
+          cd clients/admin-ui
+          npm install
+
+      - name: Build and export frontend files
+        run: |
+          cd clients/admin-ui
+          npm run prod-export
+
       - name: Install Twine
         run: pip install twine
 
       - name: Twine Upload
         run: |
-          python setup.py sdist 
+          python setup.py sdist bdist_wheel 
           twine upload dist/*
         env:
           TWINE_USERNAME: __token__
