--- a/.dockerignore
+++ b/.dockerignore
@@ -2,7 +2,7 @@
 build/
 dist/
 src/fidesctl.egg-info/
-src/ui-build/
+src/fidesctl/ui-build/
 
 # Ignore Python-Specific Files
 .mypy_cache/
@@ -30,8 +30,8 @@ docs/
 # Ignore dev files
 .github/
 .devcontainer/
-node_modules/
+**/node_modules/
 
 # Ignore cypress artifacts
-videos/
-screenshots/
+**/videos/
+**/screenshots/
