Update token name

--- a/.github/workflows/publish_package_testpypi.yaml
+++ b/.github/workflows/publish_package_testpypi.yaml
@@ -39,4 +39,4 @@ jobs:
           twine upload --repository testpypi dist/*
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.TESTPYPI_TOKEN }}
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
