--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
-style = pep440
+style = pep440-pre
 versionfile_source = src/fidesctl/_version.py
 versionfile_build = fidesctl/_version.py
 tag_prefix =
