--- a/.github/workflows/publish_package_testpypi.yaml
+++ b/.github/workflows/publish_package_testpypi.yaml
@@ -1,6 +1,10 @@
 name: Publish to Test PyPI
 
 on:
+  # REMOVE THIS, JUST FOR DEBUGGING!!
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
