Added Choose your connection feature (#987)
* Added Choose your connection feature

760-Add a Connection - Select a connector to configure (front end)
866-Add a Connection - Front End layout structure

* Updated CHANGELOG.md file

* Fix lint issues

* Fix build issue

* Hide overflow

Co-authored-by: Andrew Jackson <andrew.c.j1995@gmail.com>

--- a/clients/ops/admin-ui/tsconfig.json
+++ b/clients/ops/admin-ui/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "paths": {
       "common/*": ["src/features/common/*"],
+      "connection-type/*": ["src/features/connection-type/*"],
       "datastore-connections/*": ["src/features/datastore-connections/*"],
       "privacy-requests/*": ["src/features/privacy-requests/*"],
       "subject-request/*": ["src/features/subject-request/*"],
