--- a/clients/ops/admin-ui/package.json
+++ b/clients/ops/admin-ui/package.json
@@ -2,6 +2,7 @@
   "name": "fidesops-admin-ui",
   "private": true,
   "scripts": {
+    "chrome:debug": "BROWSER='google chrome' BROWSER_ARGS='--remote-debugging-port=9222' npm run dev",
     "dev": "next dev",
     "dev:mock": "echo '🚨 Running with mock API'; NEXT_PUBLIC_MOCK_API=true next dev",
     "build": "next build && next export",
@@ -31,11 +32,11 @@
     "date-fns-tz": "^1.3.1",
     "formik": "^2.2.9",
     "framer-motion": "^5",
-    "lodash.debounce": "^4.0.8",
     "msw": "^0.42.0",
     "next": "12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feature-flags": "^1.0.0",
     "react-redux": "^7.2.6",
     "whatwg-fetch": "^3.6.2",
     "yup": "^0.32.11"
@@ -44,7 +45,6 @@
     "@next/bundle-analyzer": "^12.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
-    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
