Added Auth0 Connector (#991)

--- a/pytest.ini
+++ b/pytest.ini
@@ -22,6 +22,7 @@ markers =
     integration_hubspot
     integration_segment
     integration_sendgrid
+    integration_auth0
     integration_outreach
     integration_salesforce
     integration_adobe_campaign
