--- a/saas_config.toml
+++ b/saas_config.toml
@@ -48,6 +48,13 @@ domain = ""
 api_key = ""
 identity_email = ""
 
+[auth0]
+domain = ""
+client_id = ""
+client_secret = ""
+access_token = ""
+identity_email = ""
+
 [outreach]
 domain = ""
 client_id = ""
