Subject Request Events and Logs Section (#1018)
* Fix small issue with eslint config

* Get initial drawer working

* Add jest config to eslintignore

* Fix small css issue

* Refactor components and get initial functionality

* Fix small logic error

* Fix couple of bugs and format code

* Conditinally display error tag

* Fix issues with merge

* Format and lint

* Sort imports

* Update to new solution

* Format code

* Update changelog

Co-authored-by: Sean Preston <sean@ethyca.com>

--- a/clients/ops/admin-ui/package.json
+++ b/clients/ops/admin-ui/package.json
@@ -20,8 +20,9 @@
     "prod-export": "npm run export && npm run copy-export"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.0",
-    "@chakra-ui/system": ">=1.0.0",
+    "@chakra-ui/system": "^1.12.1",
     "@chakra-ui/utils": "^1.10.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
