--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -2,14 +2,22 @@ name: Publish fidesctl
 
 on:
   push:
+    branches:
+      - main
     tags:
       - "*"
 
 jobs:
   upload_to_pypi:
     runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # This is required to properly tag packages
+
+      - name: Setup Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
       - name: Use Node.js 16
         uses: actions/setup-node@v2
@@ -29,10 +37,25 @@ jobs:
       - name: Install Twine
         run: pip install twine
 
-      - name: Twine Upload
+      - name: Build the package
+        run: python setup.py sdist bdist_wheel 
+
+      - name: Upload to test pypi
+        run: twine upload --repository testpypi dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_TOKEN }}
+
+      - name: Check Prod Tag
+        id: check-tag
         run: |
-          python setup.py sdist bdist_wheel 
-          twine upload dist/*
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo ::set-output name=match::true
+          fi
+
+      - name: Upload to pypi
+        if: steps.check-tag.outputs.match == 'true'
+        run: twine upload dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
