--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -1,6 +1,10 @@
 name: Publish fidesctl
 
 on:
+  # TODO: remove this!!!
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
