Update the compose file and workflows to expect an already-built image (#966)
* Update the compose file and workflows to be in line with fidesctl

* update the compose file to look for a specific image

* rename files and update the safe PR checks

* add check_migrations to the ci checks and nox

* fix the failing PR checks

* fix CI failures

* update the unsafe checks workflow

* update run_infrastructure to use the compose service name

* remove the makefile and the old run_infra script

* bump pylint version, pin isort, fix issues

* update pytest setup path

* update the changelog

* make OPS_TEST_DIR a constant

* fix nox missing vars

* specify that the nox imports are relative imports

* remove relative import paths

* run isort

Co-authored-by: Sean Preston <sean@ethyca.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 services:
   webserver:
-    container_name: webserver
-    build:
-      context: .
-      target: dev
+    image: ethyca/fidesops:local
     depends_on:
       - db
       - redis
@@ -60,10 +57,7 @@ services:
       - "0.0.0.0:6379:6379"
 
   worker:
-    container_name: worker
-    build:
-      context: .
-      target: dev
+    image: ethyca/fidesops:local
     command: fidesops worker
     depends_on:
       redis:
